--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,4 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color="primary">
+  <button mat-button (click)="openSidebar()">菜单</button>
+  <span>企业协作平台</span>
+</mat-toolbar>
