--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar color="primary">
-  <button mat-button (click)="openSidebar()">菜单</button>
+  <a mat-icon-button color="warn" (click)="openSidebar()">
+    <mat-icon svgIcon="myHomeIcon"></mat-icon>
+  </a>
   <span>企业协作平台</span>
 </mat-toolbar>
