--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -6,7 +6,11 @@
       <mat-input-container color="accent">
         <input matInput type="text" placeholder="您的email">
       </mat-input-container>
-  </mat-card-content>
+      <mat-input-container color="accent">
+        <input matInput type="password" placeholder="密码">
+      </mat-input-container>
+      <button mat-button type="button">登录</button>
+  </mat-card-content> 
   <mat-card-actions>
     <p>还没有账户？<a href="">注册</a></p>
     <p>忘记密码？<a href="">找回</a></p>
