--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,3 +1,10 @@
-<p>
-  sidebar works!
-</p>
+<mat-list>
+  <h3>项目</h3>
+  <mat-list-item>
+    <span>项目首页</span>
+  </mat-list-item>
+  <h3>日历</h3>
+  <mat-list-item>
+    <span>日历首页</span>
+  </mat-list-item>
+</mat-list>
