--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,3 @@
-header {
-    background: rgb(117, 68, 68);
-}
-
-footer {
-    background: rgb(73, 73, 78);
-}
-
-main {
-    background: rgba(241, 236, 236, 0.171);
-}
-
 mat-sidenav {
-    background: red;
+  width: 14em;
 }
