--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<mat-sidenav-container>
+<mat-sidenav-container [class.my-dark-theme]="darkTheme">
   <mat-sidenav #sidenav mode="over" position="start">
     <app-sidebar></app-sidebar>
   </mat-sidenav>
   <div class="site">
     <header color="#FFF176">
-      <app-header (toggle)="sidenav.toggle()"></app-header>
+      <app-header (toggle)="sidenav.toggle()" (toggleDarkTheme)="switchTheme($event)"></app-header>
     </header>
     <main>
       <router-outlet></router-outlet>
     </main>
-    <footer>
+      <footer>
       <app-footer></app-footer>
     </footer>
   </div>
