--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -10,7 +10,7 @@
       <mat-input-container color="accent" class="full-width">
         <input matInput type="password" placeholder="密码">
       </mat-input-container>
-      <button mat-raised-button type="button">登录</button>
+      <button mat-raised-button color="warn" type="button">登录</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
       <p>还没有账户？<a href="">注册</a></p>
