--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,4 +3,6 @@
     <mat-icon svgIcon="myHomeIcon"></mat-icon>
   </a>
   <span>企业协作平台</span>
+   <span class="fill-remaining-space"></span>
+  <mat-slide-toggle (change)="onChange($event)">dark</mat-slide-toggle>
 </mat-toolbar>
